refactor(flora, fauna, usuario, ruta):se arreglan las salidas y los controller