@@ -1,10 +1,10 @@
 package es.iespuertodelacruz.mp.canarytrails.controller;
 
 import es.iespuertodelacruz.mp.canarytrails.dto.fauna.*;
-import es.iespuertodelacruz.mp.canarytrails.dto.usuario.UsuarioSalidaDtoV2;
 import es.iespuertodelacruz.mp.canarytrails.entities.Fauna;
 import es.iespuertodelacruz.mp.canarytrails.entities.Ruta;
 import es.iespuertodelacruz.mp.canarytrails.entities.Usuario;
+import es.iespuertodelacruz.mp.canarytrails.mapper.FaunaMapper;
 import es.iespuertodelacruz.mp.canarytrails.service.FaunaService;
 import es.iespuertodelacruz.mp.canarytrails.service.RutaService;
 import es.iespuertodelacruz.mp.canarytrails.service.UsuarioService;
@@ -24,6 +24,10 @@ public class FaunaControllerAdmin {
     
     @Autowired
     FaunaService faunaService;
+
+    @Autowired
+    FaunaMapper faunaMapper;
+
     @Autowired
     UsuarioService usuarioService;
     @Autowired
@@ -37,38 +41,12 @@ public class FaunaControllerAdmin {
     public ResponseEntity<?> findAllFaunas(){
         //System.out.println("holaaaaaa estoy aqui");
 
-        return ResponseEntity.ok(faunaService.findAll()
-                        .stream()
-                        .map(fauna -> new FaunaSalidaDto(
-                                        fauna.getId(),
-                                        fauna.getNombre(),
-                                        fauna.getDescripcion(),
-                                        fauna.getAprobada(),
-                                        new UsuarioSalidaFaunaDto(
-                                                fauna.getUsuario().getId(),
-                                                fauna.getUsuario().getNombre(),
-                                                fauna.getUsuario().getApellidos(),
-                                                fauna.getUsuario().getCorreo(),
-                                                fauna.getUsuario().getPassword(),
-                                                fauna.getUsuario().getVerificado(),
-                                                fauna.getUsuario().getRol()
-                                        ),
-                                        fauna.getRutas()
-                                                .stream()
-                                                .map(ruta -> new RutaSalidaFaunaDto(
-                                                        ruta.getId(),
-                                                        ruta.getNombre(),
-                                                        ruta.getDificultad(),
-                                                        ruta.getTiempoDuracion(),
-                                                        ruta.getDistanciaMetros(),
-                                                        ruta.getDesnivel(),
-                                                        ruta.getAprobada()
-                                                )
-                                        ).toList()
-                                )
-                        )
-                .collect(Collectors.toList())
-        );
+        List<Fauna> faunas = faunaService.findAll();
+        List<FaunaSalidaDto> faunaSalidasDto = faunas.stream()
+                .map(faunaMapper::toDto)
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(faunaSalidasDto);
     }
 
     /**
@@ -85,33 +63,7 @@ public class FaunaControllerAdmin {
             return ResponseEntity.notFound().build();
         }
 
-        FaunaSalidaDto dto = new FaunaSalidaDto(
-                        fauna.getId(),
-                        fauna.getNombre(),
-                        fauna.getDescripcion(),
-                        fauna.getAprobada(),
-                        new UsuarioSalidaFaunaDto(
-                                fauna.getUsuario().getId(),
-                                fauna.getUsuario().getNombre(),
-                                fauna.getUsuario().getApellidos(),
-                                fauna.getUsuario().getCorreo(),
-                                fauna.getUsuario().getPassword(),
-                                fauna.getUsuario().getVerificado(),
-                                fauna.getUsuario().getRol()
-                        ),
-                        fauna.getRutas()
-                                .stream()
-                                .map(ruta -> new RutaSalidaFaunaDto(
-                                                ruta.getId(),
-                                                ruta.getNombre(),
-                                                ruta.getDificultad(),
-                                                ruta.getTiempoDuracion(),
-                                                ruta.getDistanciaMetros(),
-                                                ruta.getDesnivel(),
-                                                ruta.getAprobada()
-                                        )
-                                ).toList()
-        );
+        FaunaSalidaDto dto = faunaMapper.toDto(fauna);
 
         return ResponseEntity.ok(dto);
     }
@@ -119,17 +71,12 @@ public class FaunaControllerAdmin {
     /**
      * Endpoint para añadir una fauna a la bbdd
      * @param dto con los datos que se deben introducir para crear la fauna
-     * @return un JSON de la fauna creada
+     * @return un JSON de la fauna guardada
      */
     @PostMapping("/add")
     public ResponseEntity<?> createFauna(@RequestBody FaunaEntradaCreateDto dto){
-        //Logger logger = Logger.getLogger("logger");
-        //Logger logger = Logger.getLogger(Globals.LOGGER);
-        //logger.info("Llamada al find all get /api/usuarios");
-        Fauna fauna = new Fauna();
-        fauna.setNombre(dto.nombre());
-        fauna.setDescripcion(dto.descripcion());
-        fauna.setAprobada(dto.aprobada());
+
+        Fauna fauna = faunaMapper.toEntityCreate(dto);
 
         Usuario usuario = usuarioService.findById(dto.usuario());
         fauna.setUsuario(usuario);
@@ -143,47 +90,20 @@ public class FaunaControllerAdmin {
 
         Fauna faunaGuardada = faunaService.save(fauna);
 
-        FaunaSalidaDto dtoSalida = new FaunaSalidaDto(
-                faunaGuardada.getId(),
-                faunaGuardada.getNombre(),
-                faunaGuardada.getDescripcion(),
-                faunaGuardada.getAprobada(),
-                new UsuarioSalidaFaunaDto(
-                        faunaGuardada.getUsuario().getId(),
-                        faunaGuardada.getUsuario().getNombre(),
-                        faunaGuardada.getUsuario().getApellidos(),
-                        faunaGuardada.getUsuario().getCorreo(),
-                        faunaGuardada.getUsuario().getPassword(),
-                        faunaGuardada.getUsuario().getVerificado(),
-                        faunaGuardada.getUsuario().getRol()
-                ),
-                faunaGuardada.getRutas()
-                        .stream()
-                        .map(ruta -> new RutaSalidaFaunaDto(
-                                        ruta.getId(),
-                                        ruta.getNombre(),
-                                        ruta.getDificultad(),
-                                        ruta.getTiempoDuracion(),
-                                        ruta.getDistanciaMetros(),
-                                        ruta.getDesnivel(),
-                                        ruta.getAprobada()
-                                )
-                        ).toList()
-        );
+        FaunaSalidaDto dtoSalida = faunaMapper.toDto(faunaGuardada);
 
         return ResponseEntity.ok(dtoSalida);
     }
 
+    /**
+     * Endpoint que actualiza una fauna en la bbdd
+     * @param dto con el objeto a actualizar, tiene que contener la id del objeto
+     * @return true si se ha actualizado y false si no
+     */
     @PutMapping("/update")
     public ResponseEntity<?> updateAlumno(@RequestBody FaunaEntradaUpdateDto dto){
-        //Logger logger = Logger.getLogger("logger");
-        //Logger logger = Logger.getLogger(Globals.LOGGER);
-        //logger.info("Llamada al find all get /api/alumnos");
-        Fauna fauna = new Fauna();
-        fauna.setId(dto.id());
-        fauna.setNombre(dto.nombre());
-        fauna.setDescripcion(dto.descripcion());
-        fauna.setAprobada(dto.aprobada());
+
+        Fauna fauna = faunaMapper.toEntityUpdate(dto);
 
         Usuario usuario = usuarioService.findById(dto.usuario());
         fauna.setUsuario(usuario);
@@ -202,11 +122,14 @@ public class FaunaControllerAdmin {
         return ResponseEntity.ok(faunaService.update(fauna));
     }
 
+    /**
+     * Borra una fauna a partir de la id
+     * @param id de la fauna a borrar
+     * @return true si se ha borrado, false si no
+     */
     @DeleteMapping("/delete/{id}")
     public ResponseEntity<?> deleteFauna(@PathVariable("id") int id){
-        //Logger logger = Logger.getLogger("logger");
-        //Logger logger = Logger.getLogger(Globals.LOGGER);
-        //logger.info("Llamada al find all get /api/alumnos");
+
         return ResponseEntity.ok(faunaService.deleteById(id));
     }
 }
